refactor: Metodos de importacion para Duplicados Catalogo